# social-plugin

./: .env.example  .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
config/: config.example.yaml  config.yaml
scripts/: install.ps1  install.sh
social_plugin/: __init__.py  cli.py  config.py  db.py  init_wizard.py
social_plugin/analytics/: tracker.py
social_plugin/auth/: google_auth.py  linkedin_auth.py  twitter_auth.py
social_plugin/drafts/: draft_manager.py  models.py
social_plugin/generator/: claude_client.py  content_generator.py  llm_client.py  prompts.py  safety.py
social_plugin/notifications/: slack_notifier.py
social_plugin/publisher/: linkedin_publisher.py  media_uploader.py  twitter_publisher.py
social_plugin/sources/: gdocs_reader.py  local_reader.py  models.py  pdf_reader.py
social_plugin/templates/: config.template.yaml
social_plugin/trends/: linkedin_trends.py  models.py  twitter_trends.py
social_plugin/utils/: logger.py  retry.py
tests/: test_config.py  test_content_generator.py  test_db.py  test_drafts.py  test_init_upgrade.py  test_prompts.py  test_safety.py
